# CollaborationEditor

./: .gitignore  .pnp.cjs  .pre-commit-config.yaml  Makefile  docker-compose.yml  package-lock.json  package.json
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/src/adapters/: __init__.py
backend/src/adapters/persistence/: __init__.py  in_memory.py
backend/src/adapters/repositories/document_repository/: __init__.py
backend/src/adapters/repositories/document_repository/in_memory/: persistent.py  read.py  write.py
backend/src/app/: main.py
backend/src/app/routers/: __init__.py  utils.py
backend/src/application/commands/handlers/: __init__.py  create_document.py  delete_symbol.py  insert_symbol.py  save_document.py
backend/src/application/commands/schemas/: document_write_schemas.py
backend/src/application/queries/handlers/: __init__.py  get_document.py  get_user_documents.py
backend/src/application/queries/schemas/: document_read_schemas.py
backend/src/composition/: __init__.py  container.py
backend/src/contexts/document/domain/: document.py
backend/src/contexts/document/domain/entities/: aggregate.py  crdt.py
backend/src/domain/entities/: crdt.py  document.py
backend/src/drivers/rest/: dependencies.py  main.py
backend/src/drivers/rest/routers/: __init__.py  document_router.py  utils.py
backend/src/drivers/rest/schemas/document/: read.py  write.py
backend/src/ports/repositories/: document_persistence_repository.py  document_read_repository.py  document_write_repository.py
frontend/: .pnp.cjs  Dockerfile  Dockerfile.dev  (+4 more)
(+53 files in other folders)
